--- a/views/reminder/create.ejs
+++ b/views/reminder/create.ejs
@@ -13,6 +13,6 @@
       <label for="banner-image">Banner Image</label>
       <input type="text" class="form-control" id="imageInput" placeholder="Banner Image" name="banner">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button style="border: 2px solid black;" type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
